# dioxus-blocks

./: AGENTS.md  API_IMPROVEMENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.codebuddy/agents/: 测试12.md  测试3.md
.codebuddy/rules/: ProjectRule.mdc  Rust语言编码规范.mdc  code-simplifier.mdc  代码优化专家.mdc
.codebuddy/skills/dioxus-blocks-components/: SKILL.md
.codebuddy/skills/dioxus-blocks-components/assets/: examples.rs  snippets.md
.codebuddy/skills/dioxus-blocks-components/references/: 01-components-api.md  02-styling-system.md  03-state-management.md  04-patterns.md  05-best-practices.md  06-troubleshooting.md  07-testing.md  08-project-guide.md
.codebuddy/skills/skill-template/: SKILL.md
.rules/: ProjectRule.md  code-simplifier.md
dioxus-blocks-components/: Cargo.toml  Dioxus.toml  README.md
dioxus-blocks-components/assets/css/: base.scss  button.scss  card.scss  checkbox.scss  grid.scss  index.scss  input.scss  input_number.scss  layout.scss  link.scss  radio.scss  select.scss  text.scss  textarea.scss
dioxus-blocks-components/src/: constant.rs  lib.rs  outlet.rs  prelude.rs  style.rs  traits.rs
dioxus-blocks-components/src/common/: children.rs  mod.rs
dioxus-blocks-components/src/components/: button.rs  card.rs  checkbox.rs  grid.rs  image.rs  input.rs  input_number.rs  layout.rs  link.rs  mod.rs  radio.rs  select.rs  text.rs  textarea.rs  view.rs  wrap.rs
dioxus-blocks-components/src/style/: background.rs  border.rs  builder.rs  css_generator.rs  layout.rs  mod.rs  spacing.rs  text.rs  visual.rs
dioxus-blocks-macro/: Cargo.toml  README.md
dioxus-blocks-macro/src/: component.rs  lib.rs  route.rs
dioxus-blocks-ui/: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json  pnpm-lock.yaml  tailwind.config.mjs  tailwind.css
dioxus-blocks-ui/assets/: tailwind.css
dioxus-blocks-ui/assets/css/: button.scss  card.scss  grid.scss  index.scss  link.scss  navbar.css
dioxus-blocks-ui/src/: lib.rs  main.rs  route.rs
dioxus-blocks-ui/src/layout/: body.rs  footer.rs  header.rs  layouts.rs  mod.rs  navbar.rs  sidebar.rs
dioxus-blocks-ui/src/views/: blog.rs  button.rs  card.rs  checkbox.rs  grid.rs  home.rs  image.rs  input.rs  input_number.rs  layout.rs  link.rs  mod.rs  navbar.rs  radio.rs  select.rs  text copy.rs  text.rs  textarea.rs  view.rs
docs/: image_component.md  开发指南.md
