[package]
name = "dioxus-blocks-macro"
version = "0.1.0"
authors = ["silent-rain <2367221387@qq.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[dev-dependencies]
dioxus = { workspace = true }
dioxus-blocks-components = { workspace = true }
